InsuranceOrg/force-app/main/default/objects/vlocity_ins__CachedPriceBookEntryAttributeValue__c/vlocity_ins__CachedPriceBookEntryAttributeValue__c.object-meta.xml
<CustomObject>
    <description>System object used as a persistent cache of attribute values applicable to the products behind specified price book entries.</description>
    <label>Cached PriceBookEntry Attribute Value</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductAttributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>