InsuranceOrg/force-app/main/default/objects/vlocity_ins__CachedPriceBookEntryAttributeValue__c/fields/vlocity_ins__NumericValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__NumericValue__c</fullName>
    <label>Numeric Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>