InsuranceOrg/force-app/main/default/objects/vlocity_ins__CachedPriceBookEntryAttributeValue__c/fields/vlocity_ins__Pricebook2Id__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Pricebook2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Pricebook2Id</relationshipLabel>
    <relationshipName>Pricebook2Id</relationshipName>
    <type>Lookup</type>
</CustomField>